@@ -27,6 +27,8 @@ Version 3.0
   options and arguments with `nargs != 1`.
 - label passed to `progressbar` is no longer rendered with
   whitespace stripped.
+- added a way to disable the standalone mode of the `main`
+  method on a Click command to be able to handle errors better.
 
 Version 2.6
 -----------
